syntax = "proto3";

package bentoml.grpc.v1;

// cc_enable_arenas pre-allocate memory for given message to improve speed. (C++ only)
option cc_enable_arenas = true;
option cc_generic_services = true;
option go_package = "github.com/bentoml/grpc/v1";
option java_multiple_files = true;
option java_outer_classname = "TypesProto";
option java_package = "com.bentoml.grpc.v1";
option objc_class_prefix = "TYP";

// partial verbatim from tensorflow/core/framework/types.proto
enum DataType {
  // Not a legal value for DataType.  Used to indicate a DataType field
  // has not been set.
  DT_UNSPECIFIED = 0;

  // Data types that all computation devices are expected to be
  // capable to support.
  DT_FLOAT = 1;
  DT_DOUBLE = 2;
  DT_INT32 = 3;
  DT_UINT8 = 4;
  DT_INT16 = 5;
  DT_INT8 = 6;
  DT_STRING = 7;

  // Single-precision complex
  DT_COMPLEX64 = 8;
  DT_INT64 = 9;
  DT_BOOL = 10;

  // Quantized int8
  DT_QINT8 = 11;

  // Quantized uint8
  DT_QUINT8 = 12;

  // Quantized int32
  DT_QINT32 = 13;
  // Float32 truncated to 16 bits.  Only for cast ops.
  DT_BFLOAT16 = 14;

  // Quantized int16
  DT_QINT16 = 15;
  // Quantized uint16
  DT_QUINT16 = 16;

  DT_UINT16 = 17;

  // Double-precision complex
  DT_COMPLEX128 = 18;

  // Represents half data type (32 -> 16 bits).
  DT_HALF = 19;

  DT_UINT32 = 20;
  DT_UINT64 = 21;
}
